# weave

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
a2a/: __init__.py  agent_card.py  discovery.py  models.py
agent/: agent_pool.py  lightweight_llm_caller.py  prompts.py  worker.py
analysis/: __init__.py  change_verifier.py  dependency_graph.py  impact_predictor.py
backend/: __init__.py  base.py  docker_stub.py  lifecycle.py  local.py  sandbox.py  wasm.py  worktree.py
benchmarks/: __init__.py  converter.py  models.py  runner.py
cli/: approval.py  args.py  execution.py  github.py  impact.py  jobs.py  learning.py  mcp_tools.py  memory.py  skills.py  utils.py
control_plane/: __init__.py  approval.py  backend_lifecycle.py  errors.py  execution_factory.py  hooks.py  job_lifecycle.py  job_result.py  models.py  repository.py  run_lifecycle.py  service.py  worker.py  worker_executor.py  worker_recovery.py
core/: activity_detector.py  agent_registry.py  analysis_models.py  artifact_handoff.py  backend_models.py  budget_manager.py  config.py  context.py  dag_checkpoint.py  dag_compat.py  dag_engine.py  dag_models.py  eval_models.py  evaluation_pipeline.py  event_models.py  exceptions.py  guardrail_models.py  llm_client.py  llm_router.py  mcp_models.py  memory_models.py  models.py  node_executor.py  node_utils.py  progress.py  project_config.py  provider_health.py  quality_gate.py  (+6 more)
(+438 files in other folders)
