[project]
name = "harness"
version = "2.0.0"
description = "Unattended Software Development Harness - Multi-Agent Orchestration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "flake8>=7.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
harness = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
