[project]
name = "weave"
version = "0.3.7"
description = "Self-hosted multi-agent orchestration for autonomous software development — LLM-driven DAG planning, agent memory, self-learning, impact analysis, MCP/A2A integration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx[socks]>=0.27.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "flake8>=7.0.0",
    "autoflake>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.0.0",
]

[project.scripts]
weave = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: mark async tests",
    "integration: real LLM API call tests (run with -m integration)",
]
